t-shirts xps and example proposition 4

--- a/preamble/math.tex
+++ b/preamble/math.tex
@@ -77,3 +77,4 @@
 \newtheorem*{proof*}{Proof}
 \newtheorem{proposition}{Proposition}
 \newtheorem*{sketch*}{Proof Sketch}
+\newtheorem*{example*}{Example}
