--- a/minimax.tex
+++ b/minimax.tex
@@ -350,6 +350,22 @@ Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a
 	Given a rational $\lambda = p/q > 1$ and a rank $r$ between $1$ and $m - 2$, there exists a profile $P$ such that, for any weight vector $\w \in \W$, $a \in f(P)$ iff $w_{r} - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$ and $b \in f(P)$ iff $w_{r} - w_{r+1} ≤ \lambda (w_{r+1} - w_{r+2})$, where $f$ is the PSR parameterized with $\w$.
 \end{proposition}
 
+\begin{example*}
+	Suppose we want to ask the following question to the chair: $w_{2} - w_{3} ≥ 2 (w_{3} - w_{4})$. In other words, we want to relate the difference between the weights of the second and third positions with the double of the difference between the weights of the third and fourth positions. We can rewrite this inequality in the form $w_{2} + 2 w_{4} ≥ 3 w_{3}$, and we can translate the original question in one of the form "is $a$ better than $b$?" where $a$ is an alternative ranked once in second position and twice in fourth position, and $b$ is ranked three times in third position. In order to do so, we construct a profile $P$ such that $a$ and $b$ respect these constraints and all the other alternative are strictly worse than them. 
+	\begin{center}
+		$
+		\begin{array}{ccccc}
+			\#\text{voters} \quad &w_1&w_2&w_3&w_4\\
+			\mathbf{1} \quad &c&a&b&d\\
+			\mathbf{2} \quad &d&c&b&a\\
+			\mathbf{3} \quad &a&b&c&d\\
+			\mathbf{3} \quad &b&a&d&c\\
+		\end{array}.
+		$
+	\end{center}
+	The score of the alternatives are $s(a)=3w_1+3w_2+w_2+2w_4$, $s(b)=3w_1+3w_2+3w_3$, $s(c)=w_1+2w_2+3w_3+3w_4$, $s(d)=2w_1+3w_3+4w_4$. Since the weights are convex $s(a)>s(c)$, $s(a)>s(d)$, $s(b)>s(c)$ and $s(b)>s(d)$. Therefore, if the committee picks $a$ in $P$, the answer to the original question is yes, the converse if $b$ is picked.
+\end{example*}
+
 At this stage, we are satisfied that a procedure exists to transform our abstract questions to questions about winners of a PSR. Further studies would investigate, for example, what is lost in terms of elicitation efficiency when we are forced to restrain to realistic concrete questions, meaning, questions involving small profiles; or investigate the relationship between our understanding of scores as (cardinal) utility and (ordinal) scores as definition of a PSR.
 
 \paragraph{Elicitation strategies}
@@ -585,6 +601,7 @@ For the experiments we performed, we see that the number of questions required t
 			\addlegendimage{mark=square*,green,mark size=2}
 			\addlegendimage{mark=diamond*,red,mark size=2}
 			\addlegendimage{mark=pentagon*,cyan,mark size=2}
+			\addlegendimage{mark=halfcircle*,violet,mark size=2}
 			\addlegendimage{mark=*,pink,mark size=2}
 			\addlegendimage{mark=halfsquare left*,blue,mark size=2}
 			\addlegendimage{mark=halfsquare right*,brown,mark size=2}
@@ -601,6 +618,8 @@ For the experiments we performed, we see that the number of questions required t
 			\addlegendentry{m=10, n=20}
 			\addplot[thick, mark=pentagon*, mark size = {2}, mark indices = {300}, cyan] table [x=k, y=10.30]{data/normalizedLin.dat};
 			\addlegendentry{m=10, n=30}
+			\addplot[thick, mark=halfcircle*, mark size = {2}, mark indices = {400}, violet] table [x=k, y=tshirt]{data/normalizedLin.dat};
+			\addlegendentry{tshirts m11n30}
 			\addplot[thick, mark=*, mark size = {2}, mark indices = {400}, pink] table [x=k, y=courses]{data/normalizedLin.dat};
 			\addlegendentry{courses m9n146}
 			\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, blue] table [x=k, y=14.9]{data/normalizedLin.dat};
