--- a/cover letter/resubmission.tex
+++ b/cover letter/resubmission.tex
@@ -16,9 +16,9 @@
 	%Reduces verbosity about the underful vboxes.
 		\vbadness=1300
 
-\title{Cover letter}
+\title{Resubmission file}
 \subtitle{Simultaneous Elicitation of Scoring Rule and Agent Preferences for Robust Winner Determination}
-\author{}
+\author{Submission ID: TODO}
 \date{}
 \hypersetup{
 	pdfsubject={Cover letter},
