Comment about decision

--- a/cover letter/resubmission.tex
+++ b/cover letter/resubmission.tex
@@ -49,7 +49,7 @@ Compared to the submission to AAMAS 2021, and thanks to the reviews, we have bro
 	\item We better explain our motivation for asking questions that can be phrased as choices of winners out of a profile (which makes the answer “observable” in an econometric sense), and highlight the methodological novelty of this approach.
 	\item We integrated the Related Works section into the Introduction to save space, but kept all the references we added following the earlier criticisms about the missing references to the literature.
 	\item We went beyond impartial culture by testing our heuristics on real data. The results show that the number of questions to be asked is much smaller with real data than with impartial culture, as expected.
-	\item TODO We better explain what results can be anticipated before presenting the experimental results.
+	\item TODO We better explain what results can be anticipated before presenting the experimental results. \commentOC{We just agreed we don’t specifically talk about this and don’t change anything because does not apply here.}
 	\item We changed the phrasing of some of our conclusions that were too general.
 \end{itemize}
 
